--- a/apps/website/public/web/demo.html
+++ b/apps/website/public/web/demo.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>GameBox Cloud Core Tests</title>
+<title>全城封锁2</title>
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
 <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
 <link rel="manifest" href="/manifest.json" />
@@ -22,7 +22,7 @@
 <div id="demoapp" class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
 
     <nav class="tm-navbar uk-navbar uk-navbar-attached">
-        <div class="uk-navbar-brand uk-hidden-small">GameBox Cloud Core <div class="uk-badge uk-badge-success">v0.8.0</div></div>
+        <div class="uk-navbar-brand uk-hidden-small">全程封锁<div class="uk-badge uk-badge-success">v2.0</div></div>
         <ul class="uk-navbar-nav uk-hidden-small">
             <li>
                 <a href="./">Welcome</a>
@@ -30,14 +30,11 @@
             <li class="uk-active">
                 <a href="./demo.html">Demo</a>
             </li>
-            <li>
-                <a href="https://github.com/dualface/gbc-docs/blob/master/src/guide/get-started.md" target="_blank">Documents</a>
-            </li>
         </ul>
 
         <a href="#tm-offcanvas" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas></a>
 
-        <div class="uk-navbar-brand uk-navbar-center uk-visible-small" style="padding: 0 !important; font-size: 16px !important;">Core <span class="uk-badge uk-badge-success">v0.8.0</span></div>
+        <div class="uk-navbar-brand uk-navbar-center uk-visible-small" style="padding: 0 !important; font-size: 16px !important;">Core <span class="uk-badge uk-badge-success">v2.0</span></div>
     </nav>
 
     <div class="uk-grid">
