--- a/apps/website/public/web/index.html
+++ b/apps/website/public/web/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>全程封锁2</title>
+<title>全城封锁2</title>
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
 <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
 <link rel="manifest" href="/manifest.json" />
