--- a/apps/website/public/web/index.html
+++ b/apps/website/public/web/index.html
@@ -19,7 +19,7 @@
 <div class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
 
     <nav class="tm-navbar uk-navbar uk-navbar-attached">
-        <div class="uk-navbar-brand uk-hidden-small">全程封锁<div class="uk-badge uk-badge-success">v2.0</div></div>
+        <div class="uk-navbar-brand uk-hidden-small">全城封锁<div class="uk-badge uk-badge-success">v2.0</div></div>
         <ul class="uk-navbar-nav uk-hidden-small">
             <li class="uk-active">
                 <a href="./">Welcome</a>
