--- a/apps/website/public/web/demo.html
+++ b/apps/website/public/web/demo.html
@@ -22,7 +22,7 @@
 <div id="demoapp" class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
 
     <nav class="tm-navbar uk-navbar uk-navbar-attached">
-        <div class="uk-navbar-brand uk-hidden-small">全程封锁<div class="uk-badge uk-badge-success">v2.0</div></div>
+        <div class="uk-navbar-brand uk-hidden-small">全城封锁<div class="uk-badge uk-badge-success">v2.0</div></div>
         <ul class="uk-navbar-nav uk-hidden-small">
             <li>
                 <a href="./">Welcome</a>
