--- a/apps/website/public/web/index.html
+++ b/apps/website/public/web/index.html
@@ -11,21 +11,21 @@
 <meta name="msapplication-TileImage" content="/mstile-144x144.png" />
 <meta name="theme-color" content="#ffffff" />
 <link rel="stylesheet" href="css/uikit.almost-flat.min.css" />
+<link rel="stylesheet" href="css/notify.almost-flat.min.css" />
 <link rel="stylesheet" href="css/custom.css">
 <script type="application/javascript" src="js/jquery-2.1.3.min.js"></script>
 <script type="application/javascript" src="js/uikit.min.js"></script>
+<script type="application/javascript" src="js/notify.min.js"></script>
+<script type="application/javascript" src="js/cdkey.js"></script>
 </head>
 <body>
-<div class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
+<div id="cdkeyApp" class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
 
     <nav class="tm-navbar uk-navbar uk-navbar-attached">
         <div class="uk-navbar-brand uk-hidden-small">全城封锁<div class="uk-badge uk-badge-success">v2.0</div></div>
         <ul class="uk-navbar-nav uk-hidden-small">
             <li class="uk-active">
-                <a href="./">Welcome</a>
-            </li>
-            <li>
-                <a href="./demo.html">Demo</a>
+                <a href="./">管理</a>
             </li>
         </ul>
 
@@ -35,37 +35,67 @@
     </nav>
 
     <div class="uk-grid">
-        <div class="uk-width-7-10 uk-container-center">
-            <div>
+        <div class="uk-width-1-1">
 
-<article class="uk-article">
+            <div class="uk-panel uk-panel-box uk-panel-header uk-margin-top">
+                <h3 class="uk-panel-title">生成CD Key</h3>
+                <form class="uk-form uk-form-horizontal">
+                <fieldset data-uk-margin>
+                    <div class="uk-form-row">
+                        <label class="uk-form-label" for="rewards">奖励:</label>
+                        <input class="uk-form-width-medium" type="text" id="rewards" placeholder="奖励内容" disabled />
+                    </div>
 
-<ul>
+                    <div class="uk-form-row">
+                        <label class="uk-form-label" for="count">数量:</label>
+                        <input class="uk-form-width-medium" type="number" id="count" placeholder="数量" disabled />
+                    </div>
 
-</ul>
-
-</article>
-
+                    <div class="uk-form-row">
+                        <label class="uk-form-label" for="expiration">到期时间:</label>
+                        <input class="uk-form-width-medium" type="date" id="expiration" placeholder="到期时间" disabled />
+                        <button class="uk-button" id="generateButton" onclick="return false;" disabled>生成</button>
+                    </div>
+                   
+                </fieldset>
+                </form>
             </div>
+
+            <div class="uk-panel uk-panel-box uk-panel-header">
+                <iframe class="uk-width-1-1" height="300" src="../cdkey/" scrolling="yes" id="filelist"></iframe>
+            </div>
+            
+
+            <div class="uk-panel uk-panel-box uk-panel-header">
+                <h3 class="uk-panel-title">Logs</h3>
+
+                <pre id="log"></pre>
+                <button class="uk-button" id="clearLogsButton" onclick="return false;">Clear Logs</button>
+                <button class="uk-button" id="insertMarkButton" onclick="return false;">Insert Mark</button>
+            </div>
+
         </div>
+
     </div>
 
-    <div id="tm-offcanvas" class="uk-offcanvas">
-        <div class="uk-offcanvas-bar">
-            <ul class="uk-nav uk-nav-offcanvas uk-nav-parent-icon" data-uk-nav>
-                <li class="uk-active">
-                    <a href="/">Welcome</a>
-                </li>
-                <li>
-                    <a href="/demo.html">Demo</a>
-                </li>
-                <li>
-                    <a href="/docs/index.html" target="_blank">Documents</a>
-                </li>
-            </ul>
+    <div class="uk-modal" id="alertDialog">
+        <div class="uk-modal-dialog">
+            <a href="" class="uk-modal-close uk-close"></a>
+            <div class="uk-modal-header">
+                <h3>错误提示</h3>
+            </div>
+            <p class="uk-text-danger">
+                <i class="uk-icon-exclamation-circle uk-icon-medium uk-margin-right"></i>
+                <span id="alertContents"></span>
+            </p>
         </div>
     </div>
-
 </div>
 </body>
+<script>
+$(document).ready(function () {
+    var cdkeyApp = new CDKeyApp($("#cdkeyApp"));
+    cdkeyApp.init();
+});
+</script>
 </html>
