--- a/apps/update/public/download/Animation.htm
+++ b/apps/update/public/download/Animation.htm
@@ -7,7 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=x-mac-chinesesimp">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link rel=File-List href="主角武器动画.fld/filelist.xml">
+<link rel=File-List href="Animation.fld/filelist.xml">
 <style>
 <!--table
 	{mso-displayed-decimal-separator:"\.";
@@ -81,8 +81,8 @@ rt
 
 <body link="#0563C1" vlink="#954F72">
 
-<table border=0 cellpadding=0 cellspacing=0 width=3623 style='border-collapse:
- collapse;table-layout:fixed;width:2717pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=3619 style='border-collapse:
+ collapse;table-layout:fixed;width:2714pt'>
  <col width=140 style='mso-width-source:userset;mso-width-alt:4480;width:105pt'>
  <col width=180 style='mso-width-source:userset;mso-width-alt:5760;width:135pt'>
  <col width=212 style='mso-width-source:userset;mso-width-alt:6784;width:159pt'>
@@ -99,11 +99,12 @@ rt
  <col width=92 style='mso-width-source:userset;mso-width-alt:2944;width:69pt'>
  <col width=124 style='mso-width-source:userset;mso-width-alt:3968;width:93pt'>
  <col width=108 style='mso-width-source:userset;mso-width-alt:3456;width:81pt'>
- <col width=152 style='mso-width-source:userset;mso-width-alt:4864;width:114pt'>
- <col width=193 style='mso-width-source:userset;mso-width-alt:6186;width:145pt'>
- <col width=183 style='mso-width-source:userset;mso-width-alt:5845;width:137pt'>
- <col width=156 style='mso-width-source:userset;mso-width-alt:4992;width:117pt'>
- <col width=179 style='mso-width-source:userset;mso-width-alt:5717;width:134pt'>
+ <col width=84 style='mso-width-source:userset;mso-width-alt:2688;width:63pt'>
+ <col width=172 style='mso-width-source:userset;mso-width-alt:5504;width:129pt'>
+ <col width=164 style='mso-width-source:userset;mso-width-alt:5248;width:123pt'>
+ <col width=180 style='mso-width-source:userset;mso-width-alt:5760;width:135pt'>
+ <col width=172 style='mso-width-source:userset;mso-width-alt:5504;width:129pt'>
+ <col width=87 style='width:65pt'>
  <tr height=20 style='height:15.0pt'>
   <td height=20 width=140 style='height:15.0pt;width:105pt'><ruby><rb>武</rb><span
   style='display:none'><rt>wu q</rt></span></ruby>器<ruby><rb>动</rb><span
@@ -129,11 +130,12 @@ rt
   <td width=92 style='width:69pt'></td>
   <td width=124 style='width:93pt'></td>
   <td width=108 style='width:81pt'></td>
-  <td width=152 style='width:114pt'></td>
-  <td width=193 style='width:145pt'></td>
-  <td width=183 style='width:137pt'></td>
-  <td width=156 style='width:117pt'></td>
-  <td width=179 style='width:134pt'></td>
+  <td width=84 style='width:63pt'></td>
+  <td width=172 style='width:129pt'></td>
+  <td width=164 style='width:123pt'></td>
+  <td width=180 style='width:135pt'></td>
+  <td width=172 style='width:129pt'></td>
+  <td width=87 style='width:65pt'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>Seals</td>
@@ -143,7 +145,7 @@ rt
   <td>Equip</td>
   <td>Unequip</td>
   <td>Idle</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>S12K</td>
@@ -153,7 +155,7 @@ rt
   <td class=xl65>S12K_Equip_Seals</td>
   <td class=xl65>S12K_Unequip_Seals</td>
   <td class=xl65>S12K_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>M870</td>
@@ -163,7 +165,7 @@ rt
   <td class=xl65>M870_Equip_Seals</td>
   <td class=xl65>M870_Unequip_Seals</td>
   <td class=xl65>M870_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>MP5</td>
@@ -173,7 +175,7 @@ rt
   <td class=xl65>MP5_Equip_Seals</td>
   <td class=xl65>MP5_Unequip_Seals</td>
   <td class=xl65>MP5_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>AKM</td>
@@ -183,7 +185,7 @@ rt
   <td class=xl65>AKM_Equip_Seals</td>
   <td class=xl65>AKM_Unequip_Seals</td>
   <td class=xl65>AKM_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>SKS</td>
@@ -193,7 +195,7 @@ rt
   <td class=xl65>SKS_Equip_Seals</td>
   <td class=xl65>SKS_Unequip_Seals</td>
   <td class=xl65>SKS_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>AWP</td>
@@ -203,7 +205,7 @@ rt
   <td class=xl65>AWP_Equip_Seals</td>
   <td class=xl65>AWP_Unequip_Seals</td>
   <td class=xl65>AWP_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>Gatling</td>
@@ -213,7 +215,7 @@ rt
   <td class=xl65>Gatling_Equip_Seals</td>
   <td class=xl65>Gatling_Unequip_Seals</td>
   <td class=xl65>Gatling_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>RPG</td>
@@ -223,7 +225,7 @@ rt
   <td class=xl65>RPG_Equip_Seals</td>
   <td class=xl65>RPG_Unequip_Seals</td>
   <td class=xl65>RPG_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>M72</td>
@@ -233,7 +235,7 @@ rt
   <td class=xl65>M72_Equip_Seals</td>
   <td class=xl65>M72_Unequip_Seals</td>
   <td class=xl65>M72_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>DesertEagle</td>
@@ -243,7 +245,7 @@ rt
   <td class=xl65>DesertEagle_Equip_Seals</td>
   <td class=xl65>DesertEagle_Unequip_Seals</td>
   <td class=xl65 colspan=2 style='mso-ignore:colspan'>DesertEagle_Idle_Seals</td>
-  <td colspan=13 style='mso-ignore:colspan'></td>
+  <td colspan=14 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>G18C</td>
@@ -253,7 +255,7 @@ rt
   <td class=xl65>G18C_Equip_Seals</td>
   <td class=xl65>G18C_Unequip_Seals</td>
   <td class=xl65>G18C_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>Destoryer</td>
@@ -263,7 +265,7 @@ rt
   <td class=xl65>Destoryer_Equip_Seals</td>
   <td class=xl65>Destoryer_Unequip_Seals</td>
   <td class=xl65>Destoryer_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>DestoryerⅡ</td>
@@ -273,7 +275,7 @@ rt
   <td class=xl65>DestoryerⅡ_Equip_Seals</td>
   <td class=xl65>DestoryerⅡ_Unequip_Seals</td>
   <td class=xl65>DestoryerⅡ_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>Erifle</td>
@@ -283,7 +285,7 @@ rt
   <td class=xl65>Erifle_Equip_Seals</td>
   <td class=xl65>Erifle_Unequip_Seals</td>
   <td class=xl65>Erifle_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>ERifleQuick</td>
@@ -293,7 +295,7 @@ rt
   <td class=xl65>ERifleQuick_Equip_Seals</td>
   <td class=xl65>ERifleQuick_Unequip_Seals</td>
   <td class=xl65>ERifleQuick_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>TangDao</td>
@@ -303,7 +305,7 @@ rt
   <td class=xl65>TangDao_Equip_Seals</td>
   <td class=xl65>TangDao_Unequip_Seals</td>
   <td class=xl65>TangDao_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>PigHammer</td>
@@ -313,7 +315,7 @@ rt
   <td class=xl65>PigHammer_Equip_Seals</td>
   <td class=xl65>PigHammer_Unequip_Seals</td>
   <td class=xl65>PigHammer_Idle_Seals</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>BaseBallBat</td>
@@ -323,10 +325,10 @@ rt
   <td class=xl65>BaseBallBat_Equip_Seals</td>
   <td class=xl65>BaseBallBat_Unequip_Seals</td>
   <td class=xl65 colspan=2 style='mso-ignore:colspan'>BaseBallBat_Idle_Seals</td>
-  <td colspan=13 style='mso-ignore:colspan'></td>
+  <td colspan=14 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=80 style='height:60.0pt;mso-xlrowspan:4'>
-  <td height=80 colspan=21 style='height:60.0pt;mso-ignore:colspan'></td>
+  <td height=80 colspan=22 style='height:60.0pt;mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'><ruby><rb>怪</rb><span style='display:
@@ -341,7 +343,7 @@ rt
   <td><ruby><rb>攻</rb><span style='display:none'><rt>gong ji</rt></span></ruby>击3</td>
   <td><ruby><rb>死</rb><span style='display:none'><rt>si wang</rt></span></ruby>亡<ruby><rb>动</rb><span
   style='display:none'><rt>dong z</rt></span></ruby>作</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'></td>
@@ -351,7 +353,7 @@ rt
   <td>AttackRight</td>
   <td>AttackCombo</td>
   <td>Die</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>ZombieBaldy</td>
@@ -361,7 +363,7 @@ rt
   <td class=xl65>AttackRight_ZombieBaldy</td>
   <td class=xl65>AttackCombo_ZombieBaldy</td>
   <td class=xl65>Die_ZombieBaldy</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>MadDog</td>
@@ -371,7 +373,7 @@ rt
   <td class=xl65>AttackRight_MadDog</td>
   <td class=xl65>AttackCombo_MadDog</td>
   <td class=xl65>Die_MadDog</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>VariantWorm</td>
@@ -381,7 +383,7 @@ rt
   <td class=xl65>AttackRight_VariantWorm</td>
   <td class=xl65>AttackCombo_VariantWorm</td>
   <td class=xl65>Die_VariantWorm</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>ZombieMeatShiel<span style='display:none'>d</span></td>
@@ -391,7 +393,7 @@ rt
   <td class=xl65>AttackRight_ZombieMeatShiel<span style='display:none'>d</span></td>
   <td class=xl65>AttackCombo_ZombieMeatShi<span style='display:none'>eld</span></td>
   <td class=xl65>Die_ZombieMeatShield</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>VariationMacham<span style='display:none'>p</span></td>
@@ -401,10 +403,10 @@ rt
   <td class=xl65>AttackRight_VariationMacham<span style='display:none'>p</span></td>
   <td class=xl65>AttackCombo_VariationMacha<span style='display:none'>mp</span></td>
   <td class=xl65>Die_VariationMachamp</td>
-  <td colspan=14 style='mso-ignore:colspan'></td>
+  <td colspan=15 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=60 style='height:45.0pt;mso-xlrowspan:3'>
-  <td height=60 colspan=21 style='height:45.0pt;mso-ignore:colspan'></td>
+  <td height=60 colspan=22 style='height:45.0pt;mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>NPC<ruby><rb>基</rb><span
@@ -416,52 +418,52 @@ rt
   style='display:none'><rt>dong z</rt></span></ruby>作</td>
   <td><ruby><rb>死</rb><span style='display:none'><rt>si w</rt></span></ruby>亡<ruby><rb>动</rb><span
   style='display:none'><rt>dong z</rt></span></ruby>作</td>
-  <td colspan=17 style='mso-ignore:colspan'></td>
+  <td colspan=18 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'></td>
   <td>Idle</td>
   <td>Walk</td>
   <td>Die</td>
-  <td colspan=17 style='mso-ignore:colspan'></td>
+  <td colspan=18 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>StormTrooper</td>
   <td class=xl65>Idle_StormTrooper</td>
   <td class=xl65>Walk_StormTrooper</td>
   <td class=xl65>Die_StormTrooper</td>
-  <td colspan=17 style='mso-ignore:colspan'></td>
+  <td colspan=18 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>Hound</td>
   <td class=xl65>Idle_Hound</td>
   <td class=xl65>Walk_Hound</td>
   <td class=xl65>Die_Hound</td>
-  <td colspan=17 style='mso-ignore:colspan'></td>
+  <td colspan=18 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>Aquila</td>
   <td class=xl65>Idle_Aquila</td>
   <td class=xl65>Walk_Aquila</td>
   <td class=xl65>Die_Aquila</td>
-  <td colspan=17 style='mso-ignore:colspan'></td>
+  <td colspan=18 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>Ratel</td>
   <td class=xl65>Idle_Ratel</td>
   <td class=xl65>Walk_Ratel</td>
   <td class=xl65>Die_Ratel</td>
-  <td colspan=17 style='mso-ignore:colspan'></td>
+  <td colspan=18 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>Jackal</td>
   <td class=xl65>Idle_Jackal</td>
   <td class=xl65>Walk_Jackal</td>
   <td class=xl65>Die_Jackal</td>
-  <td colspan=17 style='mso-ignore:colspan'></td>
+  <td colspan=18 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=60 style='height:45.0pt;mso-xlrowspan:3'>
-  <td height=60 colspan=21 style='height:45.0pt;mso-ignore:colspan'></td>
+  <td height=60 colspan=22 style='height:45.0pt;mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'><ruby><rb>主</rb><span style='display:
@@ -504,6 +506,7 @@ rt
   style='display:none'><rt>you zou</rt></span></ruby>走</td>
   <td><ruby><rb>向</rb><span style='display:none'><rt>xiang</rt></span></ruby><ruby><rb>左</rb><span
   style='display:none'><rt>zuo zou</rt></span></ruby>走</td>
+  <td></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'></td>
@@ -527,6 +530,7 @@ rt
   <td>RunStrafeLeft</td>
   <td>WalkStrafeRight</td>
   <td>WalkStrafeLeft</td>
+  <td></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 style='height:15.0pt'>Seals</td>
@@ -548,8 +552,8 @@ rt
   <td class=xl65>Die_Seals</td>
   <td class=xl65>RunStrafeRight_Seals</td>
   <td class=xl65>RunStrafeLeft_Seals</td>
-  <td class=xl65>WalkStrafeRight_S<span style='display:none'>eals</span></td>
-  <td class=xl65>WalkStrafeLeft_Seals</td>
+  <td class=xl65>WalkStrafeRight_Seals</td>
+  <td class=xl65 colspan=2 style='mso-ignore:colspan'>WalkStrafeLeft_Seals</td>
  </tr>
 </table>
 
