--- a/apps/update/public/download/Animation.htm
+++ b/apps/update/public/download/Animation.htm
@@ -134,7 +134,8 @@ rt
  width:150pt'>
  <col class=xl65 width=87 span=6 style='width:65pt'>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 width=123 style='height:14.0pt;width:92pt'><ruby><rb>武</rb><span
+  <td height=19 class=xl66 width=123 style='height:14.0pt;width:92pt'><ruby><rb>远</rb><span
+  style='display:none'><rt>yuan c</rt></span></ruby>程<ruby><rb>武</rb><span
   style='display:none'><rt>wu q</rt></span></ruby>器<ruby><rb>动</rb><span
   style='display:none'><rt>dong z</rt></span></ruby>作</td>
   <td class=xl66 width=211 style='width:158pt'><ruby><rb>瞄</rb><span
@@ -639,13 +640,13 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'>TangDao</td>
-  <td class=xl67>TangDao_Aim_Seals</td>
-  <td class=xl67>TangDao_Attack_Seals</td>
-  <td class=xl67>TangDao_Reload_Seals</td>
-  <td class=xl67>TangDao_Equip_Seals</td>
-  <td class=xl67>TangDao_Unequip_Seals</td>
-  <td class=xl67>TangDao_Idle_Seals</td>
+  <td height=19 class=xl66 style='height:14.0pt'></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
@@ -668,13 +669,13 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'>PigHammer</td>
-  <td class=xl67>PigHammer_Aim_Seals</td>
-  <td class=xl67>PigHammer_Attack_Seals</td>
-  <td class=xl67>PigHammer_Reload_Seals</td>
-  <td class=xl67>PigHammer_Equip_Seals</td>
-  <td class=xl67>PigHammer_Unequip_Seals</td>
-  <td class=xl67>PigHammer_Idle_Seals</td>
+  <td height=19 class=xl66 style='height:14.0pt'></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
@@ -697,13 +698,13 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'>BaseBallBat</td>
-  <td class=xl67>BaseBallBat_Aim_Seals</td>
-  <td class=xl67>BaseBallBat_Attack_Seals</td>
-  <td class=xl67>BaseBallBat_Reload_Seals</td>
-  <td class=xl67>BaseBallBat_Equip_Seals</td>
-  <td class=xl67>BaseBallBat_Unequip_Seals</td>
-  <td class=xl67>BaseBallBat_Idle_Seals</td>
+  <td height=19 class=xl66 style='height:14.0pt'></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl67></td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
@@ -732,6 +733,424 @@ rt
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>近</rb><span
+  style='display:none'><rt>jin zhan</rt></span></ruby>战<ruby><rb>武</rb><span
+  style='display:none'><rt>wu qi</rt></span></ruby>器<ruby><rb>动</rb><span
+  style='display:none'><rt>dong z</rt></span></ruby>作</td>
+  <td class=xl66>Seals</td>
+  <td class=xl66>TangDao</td>
+  <td class=xl66>PigHammer</td>
+  <td class=xl66>BaseBallBat</td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>拿</rb><span
+  style='display:none'><rt>na chu</rt></span></ruby>出<ruby><rb>武</rb><span
+  style='display:none'><rt>wu qi</rt></span></ruby>器</td>
+  <td class=xl66>Equip</td>
+  <td class=xl67>TangDao_Equip_Seals</td>
+  <td class=xl67>PigHammer_Equip_Seals</td>
+  <td class=xl67>BaseBallBat_Equip_Seals</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>收</rb><span
+  style='display:none'><rt>shou hui</rt></span></ruby>回<ruby><rb>武</rb><span
+  style='display:none'><rt>wu q</rt></span></ruby>器</td>
+  <td class=xl66>Unequip</td>
+  <td class=xl67>TangDao_Unequip_Seals</td>
+  <td class=xl67>PigHammer_Unequip_Seals</td>
+  <td class=xl67>BaseBallBat_Unequip_Seals</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>休</rb><span
+  style='display:none'><rt>xiu xian</rt></span></ruby>闲<ruby><rb>动</rb><span
+  style='display:none'><rt>dong z</rt></span></ruby>作</td>
+  <td class=xl66>Idle</td>
+  <td class=xl67>TangDao_Idle_Seals</td>
+  <td class=xl67>PigHammer_Idle_Seals</td>
+  <td class=xl67>BaseBallBat_Idle_Seals</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>瞄</rb><span
+  style='display:none'><rt>miao z</rt></span></ruby>准1</td>
+  <td class=xl66>AimOne</td>
+  <td class=xl67>TangDao_AimOne_Seals</td>
+  <td class=xl67>PigHammer_AimOne_Seals</td>
+  <td class=xl67>BaseBallBat_AimOne_Seals</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>攻</rb><span
+  style='display:none'><rt>gong ji</rt></span></ruby>击1</td>
+  <td class=xl66>AttackOne</td>
+  <td class=xl67>TangDao_AttackOne_Seals</td>
+  <td class=xl67>PigHammer_AttackOne_Seals</td>
+  <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_AttackOne_Seals</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>收</rb><span
+  style='display:none'><rt>shou hui</rt></span></ruby>回1</td>
+  <td class=xl66>RecoilOne</td>
+  <td class=xl67>TangDao_RecoilOne_Seals</td>
+  <td class=xl67>PigHammer_RecoilOne_Seals</td>
+  <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_RecoilOne_Seals</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>瞄</rb><span
+  style='display:none'><rt>miao z</rt></span></ruby>准2</td>
+  <td class=xl66>AimTwo</td>
+  <td class=xl67>TangDao_AimTwo_Seals</td>
+  <td class=xl67>PigHammer_AimTwo_Seals</td>
+  <td class=xl67>BaseBallBat_AimTwo_Seals</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>攻</rb><span
+  style='display:none'><rt>gong ji</rt></span></ruby>击2</td>
+  <td class=xl66>AttackTwo</td>
+  <td class=xl67>TangDao_AttackTwo_Seals</td>
+  <td class=xl67>PigHammer_AttackTwo_Seals</td>
+  <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_AttackTwo_Seals</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>收</rb><span
+  style='display:none'><rt>shou hui</rt></span></ruby>回2</td>
+  <td class=xl66>RecoilTwo</td>
+  <td class=xl67>TangDao_RecoilTwo_Seals</td>
+  <td class=xl67>PigHammer_RecoilTwo_Seals</td>
+  <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_RecoilTwo_Seals</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>瞄</rb><span
+  style='display:none'><rt>miao z</rt></span></ruby>准3</td>
+  <td class=xl66>AimThree</td>
+  <td class=xl67>TangDao_AimThree_Seals</td>
+  <td class=xl67>PigHammer_AimThree_Seals</td>
+  <td class=xl67>BaseBallBat_AimThree_Seals</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>攻</rb><span
+  style='display:none'><rt>gong ji</rt></span></ruby>击3</td>
+  <td class=xl66>AttackThree</td>
+  <td class=xl67>TangDao_AttackThree_Seals</td>
+  <td class=xl67>PigHammer_AttackThree_Seals</td>
+  <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_AttackThree_Seals</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+ </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>收</rb><span
+  style='display:none'><rt>shou hui</rt></span></ruby>回3</td>
+  <td class=xl66>RecoilThree</td>
+  <td class=xl67>TangDao_RecoilThree_Seals</td>
+  <td class=xl67>PigHammer_RecoilThree_Seals</td>
+  <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_RecoilThree_Seals</td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
