--- a/apps/update/public/download/Animation.htm
+++ b/apps/update/public/download/Animation.htm
@@ -71,6 +71,15 @@ td
 	{mso-style-parent:style0;
 	color:red;
 	font-size:10.0pt;}
+.xl68
+	{mso-style-parent:style0;
+	font-size:10.0pt;
+	background:yellow;
+	mso-pattern:black none;}
+.xl69
+	{mso-style-parent:style0;
+	font-size:10.0pt;
+	white-space:normal;}
 ruby
 	{ruby-align:left;}
 rt
@@ -90,10 +99,10 @@ rt
 
 <body link="#0563C1" vlink="#954F72" class=xl65>
 
-<table border=0 cellpadding=0 cellspacing=0 width=4886 style='border-collapse:
- collapse;table-layout:fixed;width:3661pt'>
- <col class=xl65 width=123 style='mso-width-source:userset;mso-width-alt:3925;
- width:92pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=4930 style='border-collapse:
+ collapse;table-layout:fixed;width:3694pt'>
+ <col class=xl65 width=167 style='mso-width-source:userset;mso-width-alt:5333;
+ width:125pt'>
  <col class=xl65 width=211 style='mso-width-source:userset;mso-width-alt:6741;
  width:158pt'>
  <col class=xl65 width=260 style='mso-width-source:userset;mso-width-alt:8320;
@@ -134,7 +143,7 @@ rt
  width:150pt'>
  <col class=xl65 width=87 span=6 style='width:65pt'>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 width=123 style='height:14.0pt;width:92pt'><ruby><rb>远</rb><span
+  <td height=19 class=xl66 width=167 style='height:14.0pt;width:125pt'><ruby><rb>远</rb><span
   style='display:none'><rt>yuan c</rt></span></ruby>程<ruby><rb>武</rb><span
   style='display:none'><rt>wu q</rt></span></ruby>器<ruby><rb>动</rb><span
   style='display:none'><rt>dong z</rt></span></ruby>作</td>
@@ -755,8 +764,17 @@ rt
   <td class=xl66></td>
   <td class=xl66></td>
  </tr>
- <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'></td>
+ <tr height=37 style='height:28.0pt'>
+  <td height=37 class=xl69 width=167 style='height:28.0pt;width:125pt'><ruby><rb>黄</rb><span
+  style='display:none'><rt>huang se</rt></span></ruby>色<ruby><rb>区</rb><span
+  style='display:none'><rt>qu yu</rt></span></ruby>域，<ruby><rb>为</rb><span
+  style='display:none'><rt>wei</rt></span></ruby><ruby><rb>不</rb><span
+  style='display:none'><rt>bu na</rt></span></ruby>拿<ruby><rb>武</rb><span
+  style='display:none'><rt>wu qi</rt></span></ruby><br>
+  器<ruby><rb>的</rb><span
+  style='display:none'><rt>de</rt></span></ruby><ruby><rb>攻</rb><span
+  style='display:none'><rt>gon ji</rt></span></ruby>击<ruby><rb>动</rb><span
+  style='display:none'><rt>dong z</rt></span></ruby>作</td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
@@ -879,10 +897,10 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>休</rb><span
+  <td height=19 class=xl68 style='height:14.0pt'><ruby><rb>休</rb><span
   style='display:none'><rt>xiu xian</rt></span></ruby>闲<ruby><rb>动</rb><span
   style='display:none'><rt>dong z</rt></span></ruby>作</td>
-  <td class=xl66>Idle</td>
+  <td class=xl68>Idle</td>
   <td class=xl67>TangDao_Idle_Seals</td>
   <td class=xl67>PigHammer_Idle_Seals</td>
   <td class=xl67>BaseBallBat_Idle_Seals</td>
@@ -910,9 +928,9 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>瞄</rb><span
+  <td height=19 class=xl68 style='height:14.0pt'><ruby><rb>瞄</rb><span
   style='display:none'><rt>miao z</rt></span></ruby>准1</td>
-  <td class=xl66>AimOne</td>
+  <td class=xl68>AimOne</td>
   <td class=xl67>TangDao_AimOne_Seals</td>
   <td class=xl67>PigHammer_AimOne_Seals</td>
   <td class=xl67>BaseBallBat_AimOne_Seals</td>
@@ -940,9 +958,9 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>攻</rb><span
+  <td height=19 class=xl68 style='height:14.0pt'><ruby><rb>攻</rb><span
   style='display:none'><rt>gong ji</rt></span></ruby>击1</td>
-  <td class=xl66>AttackOne</td>
+  <td class=xl68>AttackOne</td>
   <td class=xl67>TangDao_AttackOne_Seals</td>
   <td class=xl67>PigHammer_AttackOne_Seals</td>
   <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_AttackOne_Seals</td>
@@ -969,9 +987,9 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>收</rb><span
+  <td height=19 class=xl68 style='height:14.0pt'><ruby><rb>收</rb><span
   style='display:none'><rt>shou hui</rt></span></ruby>回1</td>
-  <td class=xl66>RecoilOne</td>
+  <td class=xl68>RecoilOne</td>
   <td class=xl67>TangDao_RecoilOne_Seals</td>
   <td class=xl67>PigHammer_RecoilOne_Seals</td>
   <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_RecoilOne_Seals</td>
@@ -998,9 +1016,9 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>瞄</rb><span
+  <td height=19 class=xl68 style='height:14.0pt'><ruby><rb>瞄</rb><span
   style='display:none'><rt>miao z</rt></span></ruby>准2</td>
-  <td class=xl66>AimTwo</td>
+  <td class=xl68>AimTwo</td>
   <td class=xl67>TangDao_AimTwo_Seals</td>
   <td class=xl67>PigHammer_AimTwo_Seals</td>
   <td class=xl67>BaseBallBat_AimTwo_Seals</td>
@@ -1028,9 +1046,9 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>攻</rb><span
+  <td height=19 class=xl68 style='height:14.0pt'><ruby><rb>攻</rb><span
   style='display:none'><rt>gong ji</rt></span></ruby>击2</td>
-  <td class=xl66>AttackTwo</td>
+  <td class=xl68>AttackTwo</td>
   <td class=xl67>TangDao_AttackTwo_Seals</td>
   <td class=xl67>PigHammer_AttackTwo_Seals</td>
   <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_AttackTwo_Seals</td>
@@ -1057,9 +1075,9 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>收</rb><span
+  <td height=19 class=xl68 style='height:14.0pt'><ruby><rb>收</rb><span
   style='display:none'><rt>shou hui</rt></span></ruby>回2</td>
-  <td class=xl66>RecoilTwo</td>
+  <td class=xl68>RecoilTwo</td>
   <td class=xl67>TangDao_RecoilTwo_Seals</td>
   <td class=xl67>PigHammer_RecoilTwo_Seals</td>
   <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_RecoilTwo_Seals</td>
@@ -1086,9 +1104,9 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>瞄</rb><span
+  <td height=19 class=xl68 style='height:14.0pt'><ruby><rb>瞄</rb><span
   style='display:none'><rt>miao z</rt></span></ruby>准3</td>
-  <td class=xl66>AimThree</td>
+  <td class=xl68>AimThree</td>
   <td class=xl67>TangDao_AimThree_Seals</td>
   <td class=xl67>PigHammer_AimThree_Seals</td>
   <td class=xl67>BaseBallBat_AimThree_Seals</td>
@@ -1116,9 +1134,9 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>攻</rb><span
+  <td height=19 class=xl68 style='height:14.0pt'><ruby><rb>攻</rb><span
   style='display:none'><rt>gong ji</rt></span></ruby>击3</td>
-  <td class=xl66>AttackThree</td>
+  <td class=xl68>AttackThree</td>
   <td class=xl67>TangDao_AttackThree_Seals</td>
   <td class=xl67>PigHammer_AttackThree_Seals</td>
   <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_AttackThree_Seals</td>
@@ -1145,9 +1163,9 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>收</rb><span
+  <td height=19 class=xl68 style='height:14.0pt'><ruby><rb>收</rb><span
   style='display:none'><rt>shou hui</rt></span></ruby>回3</td>
-  <td class=xl66>RecoilThree</td>
+  <td class=xl68>RecoilThree</td>
   <td class=xl67>TangDao_RecoilThree_Seals</td>
   <td class=xl67>PigHammer_RecoilThree_Seals</td>
   <td class=xl67 colspan=2 style='mso-ignore:colspan'>BaseBallBat_RecoilThree_Seals</td>
@@ -1262,17 +1280,18 @@ rt
  </tr>
  <tr height=19 style='height:14.0pt'>
   <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>怪</rb><span
-  style='display:none'><rt>guai wu</rt></span></ruby>物<ruby><rb>动</rb><span
+  style='display:none'><rt>guai wu</rt></span></ruby>物<ruby><rb>基</rb><span
+  style='display:none'><rt>ji ben</rt></span></ruby>本<ruby><rb>动</rb><span
   style='display:none'><rt>dong z</rt></span></ruby>作</td>
   <td class=xl66><ruby><rb>休</rb><span style='display:none'><rt>xiu x</rt></span></ruby>息<ruby><rb>动</rb><span
   style='display:none'><rt>dong z</rt></span></ruby>作</td>
   <td class=xl66><ruby><rb>走</rb><span style='display:none'><rt>zou</rt></span></ruby><ruby><rb>动</rb><span
   style='display:none'><rt>dong z</rt></span></ruby>作</td>
-  <td class=xl66><ruby><rb>攻</rb><span style='display:none'><rt>gong ji</rt></span></ruby>击1</td>
-  <td class=xl66><ruby><rb>攻</rb><span style='display:none'><rt>gong ji</rt></span></ruby>击2</td>
-  <td class=xl66><ruby><rb>攻</rb><span style='display:none'><rt>gong ji</rt></span></ruby>击3</td>
   <td class=xl66><ruby><rb>死</rb><span style='display:none'><rt>si wang</rt></span></ruby>亡<ruby><rb>动</rb><span
   style='display:none'><rt>dong z</rt></span></ruby>作</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl65></td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
@@ -1298,10 +1317,10 @@ rt
   <td height=19 class=xl66 style='height:14.0pt'></td>
   <td class=xl66>Idle</td>
   <td class=xl66>Walk</td>
-  <td class=xl66>AttackLeft</td>
-  <td class=xl66>AttackRight</td>
-  <td class=xl66>AttackCombo</td>
   <td class=xl66>Die</td>
+  <td class=xl66></td>
+  <td class=xl66></td>
+  <td class=xl65></td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
@@ -1327,10 +1346,10 @@ rt
   <td height=19 class=xl66 style='height:14.0pt'>ZombieBaldy</td>
   <td class=xl67>Idle_ZombieBaldy</td>
   <td class=xl67>Walk_ZombieBaldy</td>
-  <td class=xl67>AttackLeft_ZombieBaldy</td>
-  <td class=xl67>AttackRight_ZombieBaldy</td>
-  <td class=xl67>AttackCombo_ZombieBaldy</td>
   <td class=xl67>Die_ZombieBaldy</td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl65></td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
@@ -1356,10 +1375,10 @@ rt
   <td height=19 class=xl66 style='height:14.0pt'>MadDog</td>
   <td class=xl67>Idle_MadDog</td>
   <td class=xl67>Walk_MadDog</td>
-  <td class=xl67>AttackLeft_MadDog</td>
-  <td class=xl67>AttackRight_MadDog</td>
-  <td class=xl67>AttackCombo_MadDog</td>
   <td class=xl67>Die_MadDog</td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl65></td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
@@ -1385,10 +1404,10 @@ rt
   <td height=19 class=xl66 style='height:14.0pt'>VariantWorm</td>
   <td class=xl67>Idle_VariantWorm</td>
   <td class=xl67>Walk_VariantWorm</td>
-  <td class=xl67>AttackLeft_VariantWorm</td>
-  <td class=xl67>AttackRight_VariantWorm</td>
-  <td class=xl67>AttackCombo_VariantWorm</td>
   <td class=xl67>Die_VariantWorm</td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl65></td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
@@ -1411,14 +1430,13 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'>ZombieMeatShi<span
-  style='display:none'>eld</span></td>
+  <td height=19 class=xl66 style='height:14.0pt'>ZombieMeatShield</td>
   <td class=xl67>Idle_ZombieMeatShield</td>
   <td class=xl67>Walk_ZombieMeatShield</td>
-  <td class=xl67>AttackLeft_ZombieMeatShield</td>
-  <td class=xl67>AttackRight_ZombieMeatShield</td>
-  <td class=xl67>AttackCombo_ZombieMeatShield</td>
   <td class=xl67>Die_ZombieMeatShield</td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl65></td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
@@ -1441,14 +1459,13 @@ rt
   <td class=xl66></td>
  </tr>
  <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 style='height:14.0pt'>VariationMacha<span
-  style='display:none'>mp</span></td>
+  <td height=19 class=xl66 style='height:14.0pt'>VariationMachamp</td>
   <td class=xl67>Idle_VariationMachamp</td>
   <td class=xl67>Walk_VariationMachamp</td>
-  <td class=xl67>AttackLeft_VariationMachamp</td>
-  <td class=xl67>AttackRight_VariationMachamp</td>
-  <td class=xl67>AttackCombo_VariationMachamp</td>
   <td class=xl67>Die_VariationMachamp</td>
+  <td class=xl67></td>
+  <td class=xl67></td>
+  <td class=xl65></td>
   <td class=xl66></td>
   <td class=xl66></td>
   <td class=xl66></td>
