吃食物动画

--- a/apps/update/public/download/Animation.htm
+++ b/apps/update/public/download/Animation.htm
@@ -2547,6 +2547,38 @@ rt
   <td class=xl65></td>
   <td class=xl65></td>
  </tr>
+ <tr height=19 style='height:14.0pt'>
+  <td height=19 class=xl66 style='height:14.0pt'><ruby><rb>吃</rb><span
+  style='display:none'><rt>chi</rt></span></ruby><ruby><rb>食</rb><span
+  style='display:none'><rt>shi wu</rt></span></ruby>物<ruby><rb>动</rb><span
+  style='display:none'><rt>dong z</rt></span></ruby>作</td>
+  <td class=xl66>Eat</td>
+  <td class=xl66>Eat_Seals</td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+  <td class=xl65></td>
+ </tr>
 </table>
 
 </body>
