--- a/apps/website/public/web/index.html
+++ b/apps/website/public/web/index.html
@@ -27,6 +27,9 @@
             <li class="uk-active">
                 <a href="./">管理</a>
             </li>
+            <li>
+                <a href="./game.html">游戏中心</a>
+            </li>
         </ul>
 
         <a href="#tm-offcanvas" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas></a>
