--- a/apps/website/public/web/game.html
+++ b/apps/website/public/web/game.html
@@ -40,10 +40,10 @@
         <div class="uk-grid">
         <div class="uk-width-1-1">
              <div class="uk-panel uk-panel-box uk-panel-header uk-margin-top">
-                <h3 class="uk-panel-title">在线列表</h3>
+                <h3 class="uk-panel-title">在线用户列表</h3>
                 <table border="1" valign="middle" cellpadding="8" cellspacing = "0" id="onlineTable">
                     <tr>
-                        <th>玩家ID</th>
+                        <th>账号ID</th>
                         <th>上线时间</th>
                     </tr>
                 </table>
