--- a/apps/website/public/web/game.html
+++ b/apps/website/public/web/game.html
@@ -44,7 +44,11 @@
                 <table border="1" valign="middle" cellpadding="8" cellspacing = "0" id="onlineTable">
                     <tr>
                         <th>账号ID</th>
+                        <th>用户昵称</th>
                         <th>上线时间</th>
+                        <th>创建时间</th>
+                        <th>钻石</th>
+                        <th>科技点</th>
                     </tr>
                 </table>
             </div>
