--- a/apps/website/public/web/game.html
+++ b/apps/website/public/web/game.html
@@ -16,6 +16,7 @@
 <script type="application/javascript" src="js/jquery-2.1.3.min.js"></script>
 <script type="application/javascript" src="js/uikit.min.js"></script>
 <script type="application/javascript" src="js/notify.min.js"></script>
+<script type="application/javascript" src="js/date.js"></script>
 <script type="application/javascript" src="js/game.js"></script>
 </head>
 <body>
