--- a/apps/website/public/web/game.html
+++ b/apps/website/public/web/game.html
@@ -50,6 +50,7 @@
                         <th>创建时间</th>
                         <th>钻石</th>
                         <th>科技点</th>
+                        <th>在线时间</th>
                     </tr>
                 </table>
             </div>
